src/components/message/message.css
.individual-message-container {
    padding: .5rem .5rem;
    width: fit-content;
    max-width: 60%; /* Adjust as needed */
    border-radius: 18px 18px 18px 5px; /* Top-Left, Top-Right, Bottom-Right, Bottom-Left */
    position: relative; /* Needed for positioning */
    margin: 5px; /* Space between messages */
    color: white; /* For text color */
}


.message-sent {
    background-color: var(--purple);; /* Color for sent messages */
    color: var(--offwhite);
    margin-left: auto; /* Align to the right */
    border-radius: 18px 18px 5px 18px; /* Rounded corners */
}

.message-received {
    background-color: var(--offwhite); /* Different color for received messages */
    color: var(--darkgrayreid);
    margin-right: auto; /* Align to the left */
    border-radius: 18px 18px 18px 5px; /* Rounded corners */
}

.gift-title {
    font-size: 16px;
    padding: 0 3px 5px 3px;
}

.message-received p {
    color: var(--darkgrayreid);
}

/* When a sent message follows a received message */
.message-received + .message-sent {
    margin-top: 15px; /* Increase top margin */
}

/* When a received message follows a sent message */
.message-sent + .message-received {
    margin-top: 15px; /* Increase top margin */
}

.currency-gift-box {
    display: inline-block;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    border: 1px solid #CCC;
    padding: 20px;
    border-radius: 5px;
    background-color: var(--darkgrayreid);
    margin-top: 5px;
    margin-bottom: 5px;
    font-size: 5rem;
    border: 1px solid var(--offwhite);
}

img {
    max-width: 100%;
    height: auto;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.message-received img {
    border-radius: 18px 18px 18px 5px; /* Rounded corners */
}

.message-sent img {
    border-radius: 18px 18px 5px 18px; /* Rounded corners */
}

.message-received .currency-gift-box {
    color: var(--offwhite);
    border-radius: 18px 18px 18px 5px;
}

.message-sent .currency-gift-box {
    border-radius: 18px 18px 5px 18px;
}

